--- a/css/listpage.css
+++ b/css/listpage.css
@@ -1,5 +1,5 @@
-.col {
-    background-color: red;
+body {
+    margin: 0;
 }
 
 .container-fluid {
@@ -10,22 +10,60 @@
 .nav {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-bar {
-    height: 200px;
-    width: 100%;
-    background-color: red;
+    height: 100px;
 }
 
-.content-one {
-    height: 600px;
-    width: 100%;
-    background-color: yellow;
+.card-deck {
+    margin-top: 3%;
+}
+
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+.sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
+div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+    .sidebar a {
+      text-align: center;
+      float: none;
+    }
 }
 
 footer {
     height: 100px;
     width: 100%;
-    background-color: blue;
 }
