--- a/account_style.css
+++ b/account_style.css
@@ -1,8 +1,10 @@
 /* #####@@@@@##### DEFAULTS ######@@@@@@###### */
 body {
     margin: 0;
-    font-family: McClatchy Sans, Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #388659;
+    position: relative;
+    overflow: hidden;
 }
 
 input {
@@ -221,12 +223,14 @@ div.temp {
 
 .profile-pic-wrap {
     margin-left: 20px;
-    width: 30%;
+    width: 60px;
 }
 
 .profile-pic-wrap img {
     width: 60px;
     height: 60px;
+    border-radius: 50%;
+    border: 1px solid grey;
 }
 
 .profile-text-wrap {
@@ -375,15 +379,13 @@ i.fa-heart-o {
 }
 
 
-/* POst creater */
-
+/* Post Creater */
 .post-creator-profile {
     display: flex;
     justify-content: flex-start;
     margin: 10px 0 5px 15px;
 }
 
-.profile-pic-wrap,
 .post-image-wrap {
     width: 50px;
     height: 50px;
@@ -482,7 +484,6 @@ h6 {
         display: flex;
     }
 
-
 }
 
 
@@ -493,8 +494,6 @@ h6 {
     .search-bar-wrap {
         margin-left: 20px;
     }
-
-
 }
 
 
@@ -533,103 +532,4 @@ h6 {
         padding: 0;
     }
 
-}
-
-
-
-
-
-
-
-
-
-
-
-footer {
-    display: flex;
-    justify-content: center;
-    z-index: 8;
-}
-
-
-
-
-
-/* SIGN UP FORM */
-.sign-up-wrap {
-    /* DISPLAY OF NONE HIDES POP UP (working on later) */
-    display: none;
-    width: 80%;
-    background-color: blanchedalmond;
-    margin: 20px 0 20px 0;
-    padding: 20px 0;
-    border-radius: 4px;
-}
-
-h1 {
-    text-align: center;
-    margin: 0px 0 10px 0;
-}
-
-.image-wrap {
-    display: flex;
-    justify-content: center;
-}
-
-.profile-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 1px solid white;
-}
-
-form {
-    padding: 0 20px;
-    margin-top: 20px;
-}
-
-.input-wrap {
-    position: relative;
-    margin-bottom: 15px;
-}
-
-.input-wrap input {
-    width: 90%;
-    height: 30px;
-    border: 1px solid white;
-    padding-left: 25px;
-}
-
-.sign-up-icon-wrap {
-    position: absolute;
-    top: 8px;
-    left: 5px;
-}
-
-button {
-    border-radius: 0px;
-}
-
-#files {
-    padding: 0;
-    visibility: hidden;
-    position: absolute;
-}
-
-.fal:hover,
-.files {
-    cursor: pointer;
-}
-
-.files {
-    margin: 0;
-    padding: 2px 4px;
-}
-
-.files-btn {
-    padding: 0;
-}
-
-span {
-    margin: -15px 0 8px 0;
 }
