--- a/account_style.css
+++ b/account_style.css
@@ -4,7 +4,6 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #388659;
     position: relative;
-    overflow: hidden;
 }
 
 input {
@@ -41,7 +40,8 @@ div.logo-on-nav-wrap {
     margin: 2px 0 0 -5px;
 }
 
-.logo-on-nav:hover {
+.logo-on-nav:hover,
+.likes-wrap i{
     cursor: pointer;
 }
 
@@ -121,6 +121,11 @@ input {
     margin-right: 20px;
 }
 
+.individual-option-wrap a {
+    color: black;
+    margin-top: -5px;
+}
+
 .icon-wrap {
     width: 100%;
     height: 100%;
@@ -163,7 +168,7 @@ div.temp {
 .overall-feed {
     background-color: #D8DBE2;
     flex-wrap: wrap;
-    margin-top: 60px;
+    margin-top: 75px;
     padding: 0 8%;
 }
 
@@ -184,7 +189,7 @@ div.temp {
     width: 90%;
     position: sticky;
     background-color: blue;
-    top: 82px;
+    top: 105px;
     z-index: 0;
     height: 0;
     margin-top: 30px;
@@ -218,7 +223,7 @@ div.temp {
 
 .individual-profile-option div p,
 .profile-header div p {
-    margin: 0 0 0 15px;
+    margin: -2px 0 0 15px;
 }
 
 .profile-pic-wrap {
@@ -297,7 +302,8 @@ div.right-feed-type p {
 }
 
 .post-wrap {
-    background-color: #68D9D6;
+    background-color: #b3d7ff;
+/*     background-color: white; */
     display: flex;
     flex-direction: column;
     min-height: 200px;
@@ -309,7 +315,6 @@ div.right-feed-type p {
 
 .post-description-wrap {
     min-height: 40px;
-    background-color: #FAF334;
 }
 
 .post-main-img-wrap {
@@ -340,9 +345,12 @@ p.total-likes {
     margin: 12px 0 0px 15px;
 }
 
-i.fa-heart-o {
-    margin-top: -3px;
+.likes-wrap i {
     font-size: 20px;
+}
+
+.fa-heart {
+  color: #ec8992;;
 }
 
 .likes-wrap p {
@@ -412,10 +420,12 @@ i.fa-heart-o {
     margin-left: 5px;
 }
 
-h6 {
-    margin: 5px;
+.post-creator-desc h6 {
     font-size: 18px;
     padding: 0;
+    margin: 5px 0 0 5px;
+    font-weight: 600;
+    line-height: 1;
 }
 
 .post-text {
@@ -429,7 +439,6 @@ h6 {
 /* #####@@@@@#####        ######@@@@@@###### */
 /* #####@@@@@##### MOBILE ######@@@@@@###### */
 /* #####@@@@@#####        ######@@@@@@###### */
-
 @media screen and (max-width: 1000px) {
 
     /* #####@@@@@##### NAVIGATION BAR ######@@@@@@###### */
@@ -444,13 +453,23 @@ h6 {
 
     .dropped-options {
         height: 400px;
+        margin-top: -1px;
     }
 
     .dropped-options .drop-down-wrap div {
         margin-top: -4px;
     }
 
-    div.test2 {
+    div.do-flex {
+        display: flex;
+    }
+  
+    .individual-option-wrap {
+        display: none;
+        margin-right: 0;
+    }
+
+    .drop-down-wrap {
         display: flex;
     }
 
@@ -474,21 +493,10 @@ h6 {
     .selected-feed {
         width: 100%;
     }
-
-    .individual-option-wrap {
-        display: none;
-        margin-right: 0;
-    }
-
-    .drop-down-wrap {
-        display: flex;
-    }
-
 }
 
 
 @media screen and (max-width: 750px) {
-
     /* #####@@@@@##### NAVIGATION BAR ######@@@@@@###### */
 
     .search-bar-wrap {
@@ -498,7 +506,6 @@ h6 {
 
 
 @media screen and (max-width: 600px) {
-
     /* #####@@@@@##### NAVIGATION BAR ######@@@@@@###### */
 
     div.logo-on-nav-wrap {
@@ -531,5 +538,4 @@ h6 {
     .overall-feed {
         padding: 0;
     }
-
 }
