--- a/pop-up.css
+++ b/pop-up.css
@@ -3,26 +3,32 @@
     display: flex;
     flex-direction: column;
     z-index: 5;
-    background-color: rgba(158, 158, 158, 0.616);
+    background-color: rgba(158, 158, 158, 0.667);
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     position: absolute;
+    line-height: 1;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    color: #212529;
 }
 
 .remove-pop-up {
     margin-top: 20px;
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    position: sticky;
+    z-index: 6;
+    top: 100px;
 }
 
 .remove-pop-up-btn-wrap {
     width: 30px;
     margin-right: 2%;
     text-align: center;
-    border-radius: 4px;
 }
 
 .remove-pop-up-btn-wrap:hover {
@@ -110,21 +116,26 @@ button {
     padding: 0;
 }
 
-span {
-    margin: -15px 0 8px 0;
+span.text-muted {
+    margin: -10px 0 15px 0;
 }
 
 
+
 @media screen and (max-width: 750px) {
+  
     /* Expands sign up and puts exit button inside the sign up */
+    .remove-pop-up-btn-wrap {
+        position: absolute;
+        right: 10px;
+        top: 15px;
+        z-index: 6;
+    }
+  
     .sign-up-wrap {
         width: 100%;
     }
 
-    .remove-pop-up-btn-wrap {
-        position: absolute;
-        right: 10px;
-        top: 30px;
-        z-index: 6;
-    }
+
 }
+
