--- a/css/listpage.css
+++ b/css/listpage.css
@@ -155,6 +155,8 @@ input {
     margin-bottom: 8px;
 }
 
+/* Content */
+
 
 .card-deck {
     margin-top: 3%;
@@ -173,6 +175,13 @@ input {
 div.content {
     margin-left: 200px;
     padding: 1px 16px;
+}
+
+/* Footer */
+
+.social-media {
+    margin-top: 5%;
+    margin-left: 50%;
 }
 
 /* #####@@@@@#####        ######@@@@@@###### */
