--- a/account_style.css
+++ b/account_style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background-color: #388659;
+    background-color: #323232 !important;
     position: relative;
 }
 
@@ -15,7 +15,7 @@ nav {
     position: fixed;
     width: 100vw;
     top: 0;
-    background-color: #508CA4;
+    background-color: #2c6ab5;
     z-index: 9;
 }
 
@@ -41,7 +41,7 @@ div.logo-on-nav-wrap {
 }
 
 .logo-on-nav:hover,
-.likes-wrap i{
+.likes-wrap i {
     cursor: pointer;
 }
 
@@ -70,7 +70,7 @@ div.logo-on-nav-wrap {
     height: 40px;
     width: 400px;
     border-radius: 4px;
-    background-color: rgb(61, 106, 124);
+    background-color: #67a9f5;
 }
 
 .search-input {
@@ -86,8 +86,12 @@ div.logo-on-nav-wrap {
     color: black;
 }
 
-.search::placeholder {
-    color: rgb(194, 189, 189);
+.search-input::-webkit-input-placeholder {
+    color: #fff;
+}
+
+.search-input:focus::placeholder {
+    color: #5a5e60;
 }
 
 .search-bar .fa {
@@ -99,7 +103,7 @@ div.logo-on-nav-wrap {
 }
 
 .fa-search {
-    color: rgb(194, 189, 189);
+    color: #fff;
 }
 
 input {
@@ -166,7 +170,7 @@ div.temp {
 }
 
 .overall-feed {
-    background-color: #D8DBE2;
+    background-color: #eee;
     flex-wrap: wrap;
     margin-top: 75px;
     padding: 0 8%;
@@ -179,7 +183,7 @@ div.temp {
 
 .personal-options-col {
     width: 45%;
-    background-color: #D8DBE2;
+    background-color: #eee;
     position: relative;
     display: flex;
     justify-content: center;
@@ -205,7 +209,7 @@ div.temp {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: #D8DBE2;
+    background-color: #eee;
 }
 
 .profile-header {
@@ -217,7 +221,7 @@ div.temp {
 }
 
 .individual-profile-option:hover {
-    background-color: rgb(193, 196, 202);
+    background-color: #d6d6d7 !important;
     cursor: pointer;
 }
 
@@ -282,8 +286,9 @@ div.right-feed-type p {
 .selected-feed {
     width: 55%;
     min-height: 300px;
-    background-color: #D8DBE2;
+    background-color: #eee;
     padding-bottom: 30px;
+    color: #eee;
 }
 
 .text-wrap p,
@@ -299,11 +304,12 @@ div.right-feed-type p {
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    color: #212529;
 }
 
 .post-wrap {
-    background-color: #b3d7ff;
-/*     background-color: white; */
+    background-color: #9dc9fb;
+    /*     background-color: white; */
     display: flex;
     flex-direction: column;
     min-height: 200px;
@@ -350,7 +356,8 @@ p.total-likes {
 }
 
 .fa-heart {
-  color: #ec8992;;
+    color: #ec8992;
+    ;
 }
 
 .likes-wrap p {
@@ -387,7 +394,7 @@ p.total-likes {
 }
 
 
-/* Post Creater */
+/* #####@@@@@##### POST CREATOR ######@@@@@@###### */
 .post-creator-profile {
     display: flex;
     justify-content: flex-start;
@@ -436,6 +443,23 @@ p.total-likes {
     margin: 0 5px 10px 5px;
 }
 
+/* #####@@@@@##### FOOTER #####@@@@@##### */
+html body footer {
+    background-color: #2c6ab5;
+    text-align: center;
+    height: auto;
+}
+
+html body footer p {
+    margin: 0;
+    padding: 10px 0;
+}
+
+html body footer i.fa-heart {
+    color: #faf334;
+    padding-left: 3px;
+}
+
 /* #####@@@@@#####        ######@@@@@@###### */
 /* #####@@@@@##### MOBILE ######@@@@@@###### */
 /* #####@@@@@#####        ######@@@@@@###### */
@@ -448,7 +472,7 @@ p.total-likes {
         flex-direction: column;
         border: 0;
         border-radius: 9px;
-        background-color: #4f8ca3;
+        background-color: #2c6ab5;
     }
 
     .dropped-options {
@@ -463,7 +487,7 @@ p.total-likes {
     div.do-flex {
         display: flex;
     }
-  
+
     .individual-option-wrap {
         display: none;
         margin-right: 0;
@@ -538,4 +562,9 @@ p.total-likes {
     .overall-feed {
         padding: 0;
     }
+}
+
+footer {
+    font-family: 'Aleo', serif;
+    font-weight: 600;
 }
