--- a/pop-up.css
+++ b/pop-up.css
@@ -10,7 +10,7 @@
     left: 0;
     position: absolute;
     line-height: 1;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1rem;
     font-weight: 400;
     color: #212529;
@@ -42,7 +42,7 @@
 .sign-up-wrap {
     width: 450px;
     height: 550px;
-    background-color: #D8DBE2;
+    background-color: #efefef;
     padding: 8px 0;
     border-radius: 4px;
     position: sticky;
@@ -123,7 +123,6 @@ span.text-muted {
 
 
 @media screen and (max-width: 750px) {
-  
     /* Expands sign up and puts exit button inside the sign up */
     .remove-pop-up-btn-wrap {
         position: absolute;
@@ -131,11 +130,8 @@ span.text-muted {
         top: 15px;
         z-index: 6;
     }
-  
+
     .sign-up-wrap {
         width: 100%;
     }
-
-
 }
-
